# number-gesture

./: .gitignore  README.md  REPORT.md  data_info.py  experiment report.md  get_data.py  pyproject.toml  requirements.txt  test.py  test_simple_cnn.sh  train.py  train_resnet.sh  train_simple_cnn.sh
data/: data_info.py  get_data.py
model/: model.py  normalCNN.py  resnet.py
scripts/: get_data.sh  test_normal_cnn.sh  test_resnet.sh  train_normal_cnn.sh  train_resnet.sh
